Fix : Fix the header size on mobile

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -119,7 +119,7 @@
     height: 50px;
 		background-color: $dark-color;
 
-		@media screen and (min-width: 700px) {
+		@media screen and (min-width: 1000px) {
 			display: none;
 		}
 
@@ -170,7 +170,7 @@
     z-index: 1;
     background-color: $dark-color;
 
-		@media screen and (min-width: 700px) {
+		@media screen and (min-width: 1000px) {
 			display: none;
 		}
 
@@ -183,6 +183,9 @@
     }
 
     nav {
+			display: flex;
+    	flex-wrap: wrap;
+    	justify-content: space-evenly;
 			border-bottom: 1px solid $secondary-color;
     }
   }
