--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -57,6 +57,11 @@
 						left: 0;
 						width: 50%;
 						transform: translateX(20%) translateY(-50%);
+
+						p {
+							margin-top: 10px;
+							margin-bottom: 10px;
+						}
 					}
 
 					&.inversed-container {
