--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,8 +22,8 @@ h1 {
 	margin: 0;
 
 	@media screen and (max-width: 700px) {
-		font-size: 40px;
-		line-height: 40px;
+		font-size: 35px;
+		line-height: 35px;
 	}
 }
 
@@ -95,7 +95,6 @@ button {
 img {
 	outline : none;
 }
-
 
 ::-webkit-scrollbar {
 	width: 12px;
